--- a/2048-game/style.css
+++ b/2048-game/style.css
@@ -47,8 +47,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 7.5vmin;
   font-weight: bold;
-  color: #000;
-  background: #fff;
+  background: hsl(25, 60%, var(--bg-lightness));
+  color: hsl(20, 25%, var(--text-lightness));
 
   transition: 100ms;
   animation: show 200ms;
